--- a/wally.toml
+++ b/wally.toml
@@ -1,5 +1,5 @@
 [package]
-name = "somew/confined"
+name = "mowmowkittycat/confined"
 version = "0.1.0"
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
