--- a/default.project.json
+++ b/default.project.json
@@ -9,7 +9,10 @@
       },
 	  "Packages": {
         "$path": "Packages"
-      }
+      },
+	  "Lang": {
+		"$path": "src/lang"
+	  }
     },
 
     "ServerScriptService": {
