setup UI with Roact + UIScale + Subtitles, Add canBack

--- a/wally.toml
+++ b/wally.toml
@@ -8,3 +8,4 @@ realm = "shared"
 remo = "littensy/remo@1.2.3"
 goodsignal = "stravant/goodsignal@0.2.1"
 cmdr = "evaera/cmdr@1.12.0"
+roact = "roblox/roact@1.4.4"
